examples/test/testpolicy16562.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16562
  namespace: namespace59
spec:
  podSelector:
    matchLabels:
      key8: value25
      key39: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value39
      podSelector:
        matchLabels:
          key28: value45
          key45: value41
